# wpf-demos

./: .gitignore  Directory.Build.props  README.md  WPF_跨进程窗口嵌入调研.md  create-hyperv-shortcut.ps1  qkref.props
action-path-convert/: ActionPathConvert.sln  ActionPathConvert.slnx  README.md  build.ps1  build.yaml  version.json
batch-rename-tool/: BatchRenameTool.sln  BatchRenameTool.slnx  README.md  TEMPLATE_SYNTAX_DESIGN.md  build.ps1  build.yaml  version.json
cea-view-runner/: CeaViewRunner.slnx  README.md  build.ps1  build.yaml  version.json
co-detect/: CoDetectNet.sln  CoDetectNet.slnx  build-desktop.ps1  build-desktop.yaml  build-server.ps1  build-server.yaml  build.ps1  build.yaml  version.json
co-detect/src/guesslang/: .gitignore  README.md  README_ONNX.md  analyze_python_ini.py  explain_css_misidentification.md  model_onnx.py  pyproject.toml  setup.py  test_cases.json  test_compare.py  test_onnx.py  test_tf.py
co-detect/src/guesslang/convert/: __init__.py  build_onnx_model.py  convert_onnx_compatible_to_onnx.py  extract_model_layers.py  preprocessing.py
example/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  WpfAppForQuicker.csproj  WpfAppForQuicker.sln  WpfAppForQuicker.slnx
greedysnake/: build.ps1  build.yaml  version.json
quicker-action-manage/: COMPLETION_STATUS.md  MIGRATION_NOTES.md  QuickerActionManage.sln  QuickerActionManage.slnx  README.md  SUMMARY.md  build.ps1  build.yaml  version.json
quicker-action-panel/: QuickerActionPanel.sln  QuickerActionPanel.slnx  build.ps1  build.yaml  version.json
wpf-2048/: run.ps1  (+6 more)
(+1083 files in other folders)
