[project]
name = "guesslang"
version = "2.2.2"
description = "Detect the programming language of a source code"
readme = "README.md"
requires-python = ">=3.7,<3.10"
license = { text = "MIT" }
authors = [
    { name = "Y. SOMDA" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "onnxruntime>=1.10.0",
    "pyfarmhash>=0.4.0",
    "pygments>=2.17.2",
    "tensorflow==2.5.0",
    "tf2onnx>=1.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "Sphinx",
    "sphinx-rtd-theme",
    "flake8",
    "mypy",
    "pylint",
]

[project.scripts]
guesslang = "guesslang.__main__:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["guesslang"]

[tool.setuptools.package-data]
guesslang = ["data/**/*"]

